--- a/source/ToDoList.html
+++ b/source/ToDoList.html
@@ -4,179 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
-    <style>
-        body, html {
-            padding: 0;
-            margin: 0;
-            width: 100%;
-            background-color: #5271FF;
-            font-family: sans-serif;
-            color: white;
-            text-align: center;
-            height: 100%;
-            display: contents;
-        }
-
-        @media(max-width: 1920px) and (max-height: 1080px){
-            
-            h1#titulo-da-pagina {
-                font-size: 50pt;
-            }
-
-            div#container {
-                background-color: white;
-                width: 38%;
-                left: 31%;
-                top: 25%;
-                position: absolute;
-                height: 60%;
-                border-radius: 40px;
-                color: black;
-            }
-
-            div#abas {
-                display: flex;
-                flex-direction: row;
-                gap: 50px;
-                font-weight: bold;
-                font-size: 15pt;
-                position: absolute;
-                top: 5%;
-                left: 5%;
-                justify-content: flex-start;
-                width: 50%;
-                align-items: center;
-            }
-
-            span.aba {
-                border: 5px solid white;
-                width: 130px;
-                border-top: none;
-                border-right: none;
-                border-left: none;
-                padding-bottom: 5px;
-                transition: 0.3s;
-            }
-
-            span.aba:hover {
-                cursor: pointer;
-            }
-
-            div#adicionar-tarefa {
-                position: absolute;
-                right: 5%;
-                top: 5%;
-            }
-
-            input#digitar-tarefa-a-ser-enviada {
-                border: none;
-                border-bottom: 1px solid grey;
-                padding-left: 10px;
-            }
-
-            input:focus {
-                outline: none;
-            }
-
-            button.btn {
-                border: none;
-                background-color: #5271FF;
-                color: white;
-                padding: 5px 20px;
-                border-radius: 15px;
-            }
-
-            button, input :hover {
-                cursor: pointer;
-            }
-
-            div#container-tarefas {
-                text-align: initial;
-                position: relative;
-                width: 90%;
-                display: flex;
-                top: 20%;
-                height: 75%;
-                left: 5%;
-                overflow: auto;
-                flex-direction: column;
-                gap: 20px;
-            }
-
-            .tarefa {
-                border-bottom: 2px solid gray;
-                padding: 5px 25px;
-                font-size: 15pt;
-                text-align: end;
-            }
-
-            span.nome-da-tarefa {
-                position: absolute;
-                left: 25px;
-            }
-
-            button.acao-de-tarefa {
-                border: none;
-                padding: 10px;
-                border-radius: 50%;
-            }
-
-            .editar-tarefa {
-                background-color: #5271FF;
-            }
-
-            .remover-tarefa {
-                background-color: red;
-            }
-
-            .concluir-tarefa {
-                background-color: rgb(0, 211, 0);
-            }
-        }
-        @media(max-width: 500px) and (max-height: 1000px){
-
-            h1#titulo-da-pagina {
-                font-size: 30pt;
-                position: absolute;
-                width: 100%;
-                top: 40px;
-            }
-
-            div#container {
-                background-color: white;
-                width: 88%;
-                left: 6%;
-                top: 25%;
-                position: absolute;
-                height: 60%;
-                border-radius: 40px;
-                color: black;
-            }
-
-            div#abas {
-                gap: 15px;
-            }
-
-            div#adicionar-tarefa {
-                position: absolute;
-                right: 10%;
-                width: 80%;
-                top: 90%;
-            }
-
-            div#container-tarefas {
-                top: 18%;
-                height: 68%;
-            }
-
-            .tarefa {
-                border-bottom: 2px solid gray;
-                padding: 2px 25px;
-                font-size: 12pt;
-                text-align: end;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/index.css" type="text/css">
 </head>
 <body>
     <h1 id="titulo-da-pagina">To Do List</h1>
@@ -191,91 +19,6 @@
         </div>
         <div id="container-tarefas"></div>
     </div>
-    <script>
-        const tarefas = []
-        const tarefasConcluidas = []
-        const abaDone = document.getElementById("aba-done")
-        const abaToDo = document.getElementById("aba-to-do")
-        const btnSend = document.getElementById("send-task")
-        const dropTask = document.getElementById("remover-tarefa")
-        const doneTask = document.getElementById("concluir-tarefa")
-        const containerTarefas = document.getElementById("container-tarefas")
-        updateAll()
-        function updateAll(){
-            containerTarefas.innerText = ""
-            if (abaToDo.style.color == "rgb(82, 113, 255)"){
-                for (let i in tarefas){
-                    containerTarefas.innerHTML += `<div class="tarefa">
-                        <span class="nome-da-tarefa">${tarefas[i]}</span>
-                        <button class="acao-de-tarefa remover-tarefa" onclick="removerTarefa(this)"></button>
-                        <button class="acao-de-tarefa concluir-tarefa" onclick="concluirTarefa(this)"></button>
-                    </div>`
-                }} else {
-                    for (let i in tarefasConcluidas){
-                    containerTarefas.innerHTML += `<div class="tarefa">
-                        <span class="nome-da-tarefa">${tarefasConcluidas[i]}</span>
-                        <button class="acao-de-tarefa remover-tarefa" onclick="removerTarefa(this)"></button>
-                    </div>`
-                }}
-            console.log(`Tarefas: ${tarefas}\nTarefas Concluídas: ${tarefasConcluidas}`)
-        }
-        
-        abaToDo.addEventListener("click", function(){
-            abaToDo.style.color = "#5271FF"
-            abaToDo.style.borderBottom = "5px solid #5271FF"
-            abaDone.style.color = "black"
-            abaDone.style.borderBottom = "5px solid white"
-        })
-
-        abaDone.addEventListener("click", function(){
-            abaDone.style.color = "#5271FF"
-            abaDone.style.borderBottom = "5px solid #5271FF"
-            abaToDo.style.color = "black"
-            abaToDo.style.borderBottom = "5px solid white"
-        })
-
-        btnSend.addEventListener("click", function(){
-            let res = document.getElementById('digitar-tarefa-a-ser-enviada')
-            let content = res.value
-            tarefas.push(content)
-            updateAll()
-            res.value = ""
-        })
-
-        function removerTarefa(element){
-            const divPai = element.parentNode
-            divPai.querySelector('span.nome-da-tarefa')
-            let tarefa = divPai.textContent.trim()
-            console.log('to aqui')
-            if (tarefas.includes(tarefa)){
-                let posicao = tarefas.indexOf(tarefa)
-                tarefas.splice(posicao, 1)
-                console.log('to aqui1')
-            } else {
-                let posicao = tarefasConcluidas.indexOf(tarefa)
-                tarefasConcluidas.splice(posicao, 1)
-                console.log('to aqui2')
-            }
-            updateAll()
-        }
-
-        function concluirTarefa(element){
-            const divPai = element.parentNode
-            divPai.querySelector('span.nome-da-tarefa')
-            let tarefa = divPai.textContent.trim()
-            let posicao = tarefas.indexOf(tarefa)
-            tarefas.splice(posicao, 1)
-            tarefasConcluidas.push(tarefa)
-            updateAll()
-        }
-
-        abaDone.addEventListener('click', function(){
-            updateAll()
-        })
-
-        abaToDo.addEventListener('click', function(){
-            updateAll()
-        })
-    </script>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
